--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "react-boilerplate",
   "version": "0.2.2",
   "scripts": {
-    "start": "webpack-dev-server --hot --inline --progress",
-    
+    "start": "webpack-dev-server --hot --inline --progress --host 192.168.0.15",
+
     "prebuild": "npm run clean",
     "build": "NODE_ENV=production webpack -p",
     "postbuild": "npm run copy",
-    
+
     "clean": "rm -rf build",
-    "copy": "cp -r static/* build"
+    "copy": "xcopy /S static/* build"
   },
   "author": "Riccardo Bartoli <info@rblab.com> (http://rblab.com/)",
   "repository": {
