--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postbuild": "npm run copy",
     "clean": "rm -rf build",
     "copy": "xcopy /S static/* build",
-    "start-dos": "set NODE_ENV=production & node  server.js",
+    "start": "node  server.js",
     "start-dos": "NODE_ENV=production node  server.js"
   },
   "author": "",
