--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "postbuild": "npm run copy",
     "clean": "rm -rf build",
     "copy": "xcopy /S static/* build",
-    "start": "node  server.js",
+    "start": "node server.js",
+    "build:prod": "cross-env NODE_ENV=production webpack -p",
     "start-dos": "NODE_ENV=production node  server.js"
   },
   "author": "",
