--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.2.2",
   "scripts": {
     "dev": "webpack-dev-server --hot --inline --progress",
-    "prebuild": "npm run clean",
     "build": "set NODE_ENV=production & webpack -p",
     "postbuild": "npm run copy",
     "clean": "rm -rf build",
-    "copy": "xcopy /S static/* build",
+    "postinstall": "echo there it goes!",
     "start": "node server.js",
     "build:prod": "cross-env NODE_ENV=production webpack -p",
     "start-dos": "NODE_ENV=production node  server.js"
