--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "set NODE_ENV=production & webpack -p",
     "postbuild": "npm run copy",
     "clean": "rm -rf build",
-    "postinstall": "webpack -p",
+    "dist": "webpack -p",
+    "postinstall": "npm run dist",
     "start": "node server.js",
     "build:prod": "cross-env NODE_ENV=production webpack -p",
     "start-dos": "NODE_ENV=production node  server.js"
