--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "axios": "^0.9.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-router": "^2.0.0"
+    "react-router": "^2.0.0",
+    "webpack": "^1.12.14"
   },
   "devDependencies": {
     "babel-core": "^6.7.4",
