--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
-    "webpack": "^1.12.14"
+    "webpack": "^1.12.14",
+    "webpack-notifier": "^1.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.7.4",
